# agent-orchestrator

./: .gitignore  README.md  ROADMAP.md  app.py  desktop_launcher.py  main.py  pyproject.toml
docs/: architecture.md  beta_quickstart.md  beta_support_matrix.md  beta_task_pack.md  known_issues.md  macos_packaging.md  manual_zh.md  project_status.json  quickstart.md
eval/: __init__.py  harness.py  task_suite.py
models/: __init__.py  cached_runner.py  fake_runner.py  model_runner.py  ollama_client.py  ollama_runner.py  prompt_manager.py
orchestrator/: __init__.py  acceptance.py  acceptance_runs.py  bootstrap.py  cache.py  inspection.py  planner.py  project_status.py  resource_paths.py  router.py  runs.py  runtime_paths.py  supervisor.py  task_manager.py
schemas/: __init__.py  acceptance_schema.py  audit_schema.py  cache_schema.py  eval_schema.py  result_schema.py  task_schema.py  tool_schema.py  worker_schema.py
scripts/: build_macos_app.sh  build_macos_dmg.sh  render_report.py  start_beta.sh  validate_macos_app.sh  validate_macos_dmg.sh
tests/: __init__.py  http_fixtures.py  test_acceptance.py  test_acceptance_query.py  test_app_readiness.py  test_audit_logging.py  test_cache.py  test_cache_query.py  test_cli.py  test_desktop_launcher.py  test_eval_harness.py  test_exit_codes.py  test_inspection.py  test_ollama_client.py  test_ollama_runner.py  test_project_status.py  test_render_report.py  test_resource_paths.py  test_review_workflow.py  test_run_query.py  test_runtime_paths.py  test_supervisor.py  test_task_planner.py  test_tool_manager.py
tools/: audit.py  (+11 more)
(+13 files in other folders)
