[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "A supervisor-driven MVP for orchestrating worker agents with fake and Ollama-backed runners."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ui = [
  "streamlit>=1.37,<2.0",
]
packaging = [
  "pyinstaller>=6.0,<7.0",
]

[project.scripts]
agent-orchestrator = "main:main"

[project.gui-scripts]
agent-orchestrator-ui = "desktop_launcher:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["models", "orchestrator", "schemas", "tools", "workers"]
py-modules = ["app", "desktop_launcher", "main"]
